# Inteligencia-Artificial-2026-1

./: .gitignore  2025S1-IA-Examen1.ipynb  fix_notebooks.py  pyproject.toml  run_notebooks.py
1_Supervised_Learning/: 2_1_Supervised_Learning.ipynb
2_Shallow_Networks/: 3_1_Shallow_Networks_I.ipynb  3_2_Shallow_Networks_II.ipynb  3_3_Shallow_Network_Regions.ipynb  3_4_Activation_Functions.ipynb
3_Deep_NN/: 4_1_Composing_Networks.ipynb  4_3_Deep_Networks.ipynb
4_Loss_Function/: 5_1_Least_Squares_Loss.ipynb  5_2_Binary_Cross_Entropy_Loss.ipynb  5_3_Multiclass_Cross_entropy_Loss.ipynb
5_Fitting/: 6_1_Line_Search.ipynb  6_2_Gradient_Descent.ipynb  6_3_Stochastic_Gradient_Descent.ipynb  6_4_Momentum.ipynb  6_5_Adam.ipynb
6_Backpropagation/: 7_1_Backpropagation_in_Toy_Model.ipynb  7_2_Backpropagation.ipynb
7_performance/: 8_2_Bias_Variance_Trade_Off.ipynb  8_3_Double_Descent.ipynb
8_CNN/: 10_2_Convolution_for_MNIST_1D.ipynb  10_3_2D_Convolution.ipynb  10_4_Downsampling_and_Upsampling.ipynb  10_5_Convolution_For_MNIST.ipynb
deep NN/: 4_1_Composing_Networks.ipynb  4_2_Clipping_functions.ipynb  4_3_Deep_Networks.ipynb
fitting/: 6_3_Stochastic_Gradient_Descent.ipynb  6_4_Momentum.ipynb  6_5_Adam.ipynb
notebooks/: 2025S1-IA-Examen1.ipynb  3_1_Shallow_Networks_I.ipynb  3_2_Shallow_Networks_II.ipynb  3_4_Activation_Functions.ipynb
