[project]
name = "inteligencia-artificial-2026-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "mnist1d",
    "nbconvert>=7.17.1",
    "numba>=0.65.0",
    "numpy>=2.4.2",
    "torch>=2.12.0",
]

[tool.uv.sources]
mnist1d = { git = "https://github.com/greydanus/mnist1d" }
